test/bad/path2.pacc
/*
XXX
nopacc1 "pacc: fatal: rule \`A' declared void but has value expression"
*/

P ← a:A { a }
A :: void ← "5"
